# dsa

./: .gitignore  LICENSE  README.rst  __main__.py  arguments.py  assembly.py  description.py  doc.txt  element.py  element_template.py  errors.py  field.py  file_parsing.py  line_parsing.py  main.py  member.py  member_template.py  parse_config.py  pyproject.toml  setup.py  structgroup_loader.py  structs.py  type_builder.py  type_loader.py  type_parsers.py  ui.py
doc/: README.txt  files.txt  interpreters.txt  libraries.txt  output.txt  toplevel.txt
doc/future/: libraries.txt
dsa/: __init__.py  assembly.py  catalog.py  codecs.py  description.py  disassembly.py  errors.py  field.py  file_parsing.py  filter.py  filters.py  language.py  line_parsing.py  member.py  output.py  path_loader.py  plugins.py  structgroup_loader.py  structgroups.py  structs.py  type_loader.py  ui.py
dsa/filters/: size.py
dsa/interpreters/: file.py
dsa/parsing/: codec_loader.py  file_parsing.py  line_parsing.py  path_loader.py  source_loader.py  structgroup_loader.py  token_parsing.py  type_loader.py
dsa/types/: sys.txt
dsa/ui/: __init__.py  common.py  diagnostic.py  dsa.py  dsd.py  entrypoint.py  location.py  tracing.py  usefiles.py
tests/: conftest.py  test_catalog.py  test_dsa.py  test_dsd.py  test_files.py  test_language.py
tests/environment/: test_hex_partial_ref.txt  test_hex_ref.txt
tests/expected/: test_example.txt  test_example2.txt  test_example3.txt  test_hex.txt
tests/lib/: catalog.toml  paths.txt  targets.toml  targets1.toml  targets2.toml
types/: sys.txt
(+11 files in other folders)
