[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "dsa"
version = "0.16.1+228"
description = ""
authors = [ "Karl Knechtel <karl.a.knechtel@gmail.com>",]

[tool.poetry.scripts]
dsa = "dsa.ui.dsa:dsa.invoke"
dsd = "dsa.ui.dsd:dsd.invoke"
whereisdsa = "dsa.ui.location:display.invoke"
dsa-use = "dsa.ui.usefiles:use_files.invoke"
dsa-drop = "dsa.ui.usefiles:drop_files.invoke"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
