[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "dsa"
version = "0.19.2+300"
description = "Data Structure Assembler - a tool for making sense of binary data"
license = "OSL-3.0"
authors = [ "Karl Knechtel <karl.a.knechtel@gmail.com>",]
readme = "README.rst"
homepage = "https://github.com/zahlman/dsa"
repository = "https://github.com/zahlman/dsa"
documentation = "https://github.com/zahlman/dsa"

[tool.poetry.scripts]
dsa-use = "dsa.ui.usefiles:use_files.invoke"
dsa-drop = "dsa.ui.usefiles:drop_files.invoke"
dsa = "dsa.ui.dsa:dsa.invoke"
dsd = "dsa.ui.dsd:dsd.invoke"

[tool.poetry.dependencies]
python = "^3.6"
epmanager = "^0.7.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
